--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,6 +32,10 @@
     <br>
     <br>
     <a href="/get_channel_list">전체 채널 조회</a>
+
+    <br>
+    <br>
+    <a href="/listPage">ㄱㄱ</a>
         
 </body>
 </html>
