메인 화면 대충 완료

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<style>
+    body {
+       background-image: url('https://ifh.cc/v-14MmNO');
+       background-repeat: no-repeat;
+       background-position: center  top;
+    }
+     
+ </style>
+<body bgcolor="#000000" text="white" link="white" vlink="white">
     <h1> hi! it's school page! </h1>
     <form action="/get_user" method="post">
         <input type="text" name="id" />
@@ -36,6 +44,12 @@
     <br>
     <br>
     <a href="/listPage">ㄱㄱ</a>
+
+    <p align=right>
+        <a href="./2_login.html">
+            <img src="./Login.png" onmouseover="this.src='./Login2.png'" onmouseout="this.src='./Login.png'">
+        </a>
+    </p>
         
 </body>
 </html>
