병목현상을 줄여보자

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,10 +8,10 @@
 </head>
 <style>
     body {
-       background-image: url('https://i.ibb.co/sm7yPm9/1-main-background-1280-720.jpg');
-       background-repeat: no-repeat;
-       background-position: center  top;
-    }
+		background-image: url('main_gif.gif');
+		background-repeat: no-repeat;
+		background-position: center  top;
+	 }
      
  </style>
 <body bgcolor="#000000" text="white" link="white" vlink="white">
